@@ -1,10 +1,8 @@
 package com.tdpteam.api.controller;
 
-import com.sun.tools.javac.util.List;
 import com.tdpteam.api.config.JwtTokenProvider;
 import com.tdpteam.api.request.AuthenticationRequest;
 import com.tdpteam.repo.entity.user.Account;
-import com.tdpteam.repo.entity.user.Role;
 import com.tdpteam.service.interf.AccountService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -12,16 +10,13 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.AuthenticationException;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 import static org.springframework.http.ResponseEntity.ok;
 
@@ -33,28 +28,30 @@ public class AuthController {
     private AccountService accountService;
 
     @Autowired
-    public AuthController(AuthenticationManager authenticationManager, JwtTokenProvider jwtTokenProvider, AccountService accountService) {
+    public AuthController(AuthenticationManager authenticationManager,
+                          JwtTokenProvider jwtTokenProvider,
+                          AccountService accountService) {
         this.authenticationManager = authenticationManager;
         this.jwtTokenProvider = jwtTokenProvider;
         this.accountService = accountService;
     }
 
-    @PostMapping("/signin")
-    public ResponseEntity signin(@RequestBody AuthenticationRequest data) {
+    @PostMapping("/login")
+    public ResponseEntity login(@RequestBody AuthenticationRequest data) {
         try {
-            String username = data.getEmail();
-            authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(username, data.getPassword()));
-            Account account = this.accountService.findAccountByEmail(username);
+            String email = data.getEmail();
+            authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(email, data.getPassword()));
+            Account account = this.accountService.findAccountByEmail(email);
             if(account == null){
-                throw  new UsernameNotFoundException("Username " + username + "not found");
+                throw  new UsernameNotFoundException("Email " + email + "not found");
             }
-            String token = jwtTokenProvider.createToken(username, new ArrayList<>(List.of(account.getRole().getRole())));
-            Map<Object, Object> model = new HashMap<>();
-            model.put("email", username);
+            String token = jwtTokenProvider.createToken(email, Collections.singletonList(account.getRole().getRole()));
+            Map<String, String> model = new HashMap<>();
+            model.put("email", email);
             model.put("token", token);
             return ok(model);
         } catch (AuthenticationException e) {
-            throw new BadCredentialsException("Invalid username/password supplied");
+            throw new BadCredentialsException("Invalid email/password supplied");
         }
     }
 }
